fix wrapping on searchbar/login buttons, fix CSS on searchbar, adjust for smaller screens

--- a/frontend/src/components/BusinessListingItem/BusinessListingsItem.module.css
+++ b/frontend/src/components/BusinessListingItem/BusinessListingsItem.module.css
@@ -16,6 +16,11 @@
     color: black;
 }
 
+#listingContent {
+    display: flex;
+    flex-direction: column;
+}
+
 #firstReviewBox {
     display: flex;
     flex-direction: row;
